Updated Context with rules, and verifying tests